ass5_13CS10061/y.output
Nonterminals useless in grammar

   N


Terminals unused in grammar

   STRUCT
   TYPEDEF
   UNION
   HASH


Rules useless in grammar

  212 N: %empty


State 326 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: ID
    2                   | INT_NO
    3                   | FLOAT_NO
    4                   | STRING
    5                   | CHARACTER
    6                   | LEFT_ROUND_BRACE expression RIGHT_ROUND_BRACE

    7 postfix_expression: primary_expression
    8                   | postfix_expression LEFT_SQUARE_BRACE expression RIGHT_SQUARE_BRACE
    9                   | postfix_expression LEFT_ROUND_BRACE argument_expression_listopt RIGHT_ROUND_BRACE
   10                   | postfix_expression PERIOD ID
   11                   | postfix_expression ARROW ID
   12                   | postfix_expression INCREMENT
   13                   | postfix_expression DECREMENT
   14                   | LEFT_ROUND_BRACE type_name RIGHT_ROUND_BRACE LEFT_CURLY_BRACE initializer_list RIGHT_CURLY_BRACE
   15                   | LEFT_ROUND_BRACE type_name RIGHT_ROUND_BRACE LEFT_CURLY_BRACE initializer_list COMMA RIGHT_CURLY_BRACE

   16 argument_expression_listopt: argument_expression_list
   17                            | %empty

   18 argument_expression_list: assignment_expression
   19                         | argument_expression_list COMMA assignment_expression

   20 unary_expression: postfix_expression
   21                 | INCREMENT unary_expression
   22                 | DECREMENT unary_expression
   23                 | unary_operator cast_expression
   24                 | SIZEOF unary_expression
   25                 | SIZEOF LEFT_ROUND_BRACE type_name RIGHT_ROUND_BRACE

   26 unary_operator: AMPERSAND
   27               | MULTIPLY
   28               | ADD
   29               | SUBTRACT
   30               | TILDA
   31               | NEGATION

   32 cast_expression: unary_expression
   33                | LEFT_ROUND_BRACE type_name RIGHT_ROUND_BRACE cast_expression

   34 multiplicative_expression: cast_expression
   35                          | multiplicative_expression MULTIPLY cast_expression
   36                          | multiplicative_expression DIVIDE cast_expression
   37                          | multiplicative_expression MODULUS cast_expression

   38 additive_expression: multiplicative_expression
   39                    | additive_expression ADD multiplicative_expression
   40                    | additive_expression SUBTRACT multiplicative_expression

   41 shift_expression: additive_expression
   42                 | shift_expression LEFT_SHIFT additive_expression
   43                 | shift_expression RIGHT_SHIFT additive_expression

   44 relational_expression: shift_expression
   45                      | relational_expression LESS_THAN shift_expression
   46                      | relational_expression GREATER_THAN shift_expression
   47                      | relational_expression LESS_THAN_EQUAL_TO shift_expression
   48                      | relational_expression GREATER_THAN_EQUAL_TO shift_expression

   49 equality_expression: relational_expression
   50                    | equality_expression DOUBLE_EQUAL relational_expression
   51                    | equality_expression NOT_EQUAL relational_expression

   52 and_expression: equality_expression
   53               | and_expression AMPERSAND equality_expression

   54 exclusive_or_expression: and_expression
   55                        | exclusive_or_expression XOR and_expression

   56 inclusive_or_expression: exclusive_or_expression
   57                        | inclusive_or_expression BITWISE_OR exclusive_or_expression

   58 logical_and_expression: inclusive_or_expression
   59                       | logical_and_expression BINARY_AND inclusive_or_expression

   60 logical_or_expression: logical_and_expression
   61                      | logical_or_expression BINARY_OR logical_and_expression

   62 conditional_expression: logical_or_expression
   63                       | logical_or_expression QUESTION_MARK expression COLON conditional_expression

   64 assignment_expression: conditional_expression
   65                      | unary_expression assignment_operator assignment_expression

   66 assignment_expressionopt: assignment_expression
   67                         | %empty

   68 assignment_operator: EQUAL
   69                    | MULTIPLY_EQUAL
   70                    | DIVIDE_EQUAL
   71                    | MODULUS_EQUAL
   72                    | PLUS_EQUAL
   73                    | MINUS_EQUAL
   74                    | LEFT_SHIFT_EQUAL
   75                    | RIGHT_SHIFT_EQUAL
   76                    | AND_EQUAL
   77                    | XOR_EQUAL
   78                    | OR_EQUAL

   79 expression: assignment_expression
   80           | expression COMMA assignment_expression

   81 expressionopt: expression
   82              | %empty

   83 constant_expression: conditional_expression

   84 declaration: declaration_specifiers init_declarator_listopt SEMI_COLON

   85 declaration_specifiers: storage_class_specifier
   86                       | storage_class_specifier declaration_specifiers
   87                       | type_specifier
   88                       | type_specifier declaration_specifiers
   89                       | type_qualifier
   90                       | type_qualifier declaration_specifiers
   91                       | function_specifier
   92                       | function_specifier declaration_specifiers

   93 init_declarator_listopt: init_declarator_list
   94                        | %empty

   95 init_declarator_list: init_declarator
   96                     | init_declarator_list COMMA init_declarator

   97 init_declarator: declarator
   98                | declarator EQUAL initializer

   99 storage_class_specifier: EXTERN
  100                        | STATIC
  101                        | AUTO
  102                        | REGISTER

  103 type_specifier: VOID
  104               | CHAR
  105               | SHORT
  106               | INT
  107               | LONG
  108               | FLOAT
  109               | DOUBLE
  110               | SIGNED
  111               | UNSIGNED
  112               | BOOL
  113               | COMPLEX
  114               | IMAGINARY
  115               | enum_specifier

  116 specifier_qualifier_list: type_specifier specifier_qualifier_listopt
  117                         | type_qualifier specifier_qualifier_listopt

  118 specifier_qualifier_listopt: specifier_qualifier_list
  119                            | %empty

  120 enum_specifier: ENUM identifieropt LEFT_CURLY_BRACE enumerator_list RIGHT_CURLY_BRACE
  121               | ENUM identifieropt LEFT_CURLY_BRACE enumerator_list COMMA RIGHT_CURLY_BRACE
  122               | ENUM ID

  123 enumerator_list: enumerator
  124                | enumerator_list COMMA enumerator

  125 enumerator: ID
  126           | ID EQUAL constant_expression

  127 type_qualifier: CONST
  128               | VOLATILE
  129               | RESTRICT

  130 function_specifier: INLINE

  131 declarator: pointer direct_declarator
  132           | direct_declarator

  133 direct_declarator: ID
  134                  | LEFT_ROUND_BRACE declarator RIGHT_ROUND_BRACE
  135                  | direct_declarator LEFT_SQUARE_BRACE type_qualifier_listopt assignment_expressionopt RIGHT_SQUARE_BRACE
  136                  | direct_declarator LEFT_SQUARE_BRACE STATIC type_qualifier_listopt assignment_expression RIGHT_SQUARE_BRACE
  137                  | direct_declarator LEFT_SQUARE_BRACE type_qualifier_list STATIC assignment_expression RIGHT_SQUARE_BRACE
  138                  | direct_declarator LEFT_SQUARE_BRACE type_qualifier_listopt MULTIPLY RIGHT_SQUARE_BRACE
  139                  | direct_declarator LEFT_ROUND_BRACE parameter_type_list RIGHT_ROUND_BRACE
  140                  | direct_declarator LEFT_ROUND_BRACE identifier_listopt RIGHT_ROUND_BRACE

  141 pointer: MULTIPLY
  142        | MULTIPLY type_qualifier_list
  143        | MULTIPLY pointer
  144        | MULTIPLY type_qualifier_list pointer

  145 type_qualifier_list: type_qualifier
  146                    | type_qualifier_list type_qualifier

  147 type_qualifier_listopt: type_qualifier_list
  148                       | %empty

  149 parameter_type_list: parameter_list
  150                    | parameter_list COMMA ELLIPSIS

  151 parameter_list: parameter_declaration
  152               | parameter_list COMMA parameter_declaration

  153 parameter_declaration: declaration_specifiers declarator
  154                      | declaration_specifiers

  155 identifier_list: ID
  156                | identifier_list COMMA ID

  157 identifier_listopt: identifier_list
  158                   | %empty

  159 type_name: specifier_qualifier_list

  160 initializer: assignment_expression
  161            | LEFT_CURLY_BRACE initializer_list RIGHT_CURLY_BRACE
  162            | LEFT_CURLY_BRACE initializer_list COMMA RIGHT_CURLY_BRACE

  163 initializer_list: designationopt initializer
  164                 | initializer_list COMMA designationopt initializer

  165 designation: designator_list EQUAL

  166 designationopt: designation
  167               | %empty

  168 designator_list: designator
  169                | designator_list designator

  170 designator: LEFT_SQUARE_BRACE constant_expression RIGHT_SQUARE_BRACE
  171           | PERIOD ID

  172 statement: labeled_statement
  173          | compound_statement
  174          | expression_statement
  175          | selection_statement
  176          | iteration_statement
  177          | jump_statement

  178 labeled_statement: ID COLON statement
  179                  | CASE constant_expression COLON statement
  180                  | DEFAULT COLON statement

  181 compound_statement: LEFT_CURLY_BRACE RIGHT_CURLY_BRACE
  182                   | LEFT_CURLY_BRACE block_item_list RIGHT_CURLY_BRACE

  183 block_item_list: block_item
  184                | block_item_list M block_item

  185 block_item: declaration
  186           | statement

  187 expression_statement: SEMI_COLON
  188                     | expression SEMI_COLON

  189 selection_statement: IF LEFT_ROUND_BRACE expression RIGHT_ROUND_BRACE statement
  190                    | IF LEFT_ROUND_BRACE expression RIGHT_ROUND_BRACE statement ELSE statement
  191                    | SWITCH LEFT_ROUND_BRACE expression RIGHT_ROUND_BRACE statement

  192 iteration_statement: WHILE LEFT_ROUND_BRACE expression RIGHT_ROUND_BRACE statement
  193                    | DO statement WHILE LEFT_ROUND_BRACE expression RIGHT_ROUND_BRACE SEMI_COLON
  194                    | FOR LEFT_ROUND_BRACE expressionopt SEMI_COLON expressionopt SEMI_COLON expressionopt RIGHT_ROUND_BRACE statement
  195                    | FOR LEFT_ROUND_BRACE declaration expressionopt SEMI_COLON expressionopt RIGHT_ROUND_BRACE statement

  196 jump_statement: GOTO ID SEMI_COLON
  197               | CONTINUE SEMI_COLON
  198               | BREAK SEMI_COLON
  199               | RETURN expressionopt SEMI_COLON

  200 translation_unit: external_declaration
  201                 | translation_unit external_declaration

  202 external_declaration: function_definition
  203                     | declaration

  204 function_definition: declaration_specifiers declarator declaration_list compound_statement
  205                    | declaration_specifiers declarator K compound_statement

  206 declaration_list: declaration
  207                 | declaration_list declaration

  208 identifieropt: ID
  209              | %empty

  210 M: %empty

  211 K: %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
AUTO (258) 101
BREAK (259) 198
CASE (260) 179
CHAR (261) 104
CONST (262) 127
CONTINUE (263) 197
DEFAULT (264) 180
DO (265) 193
DOUBLE (266) 109
ELSE (267) 190
ENUM (268) 120 121 122
EXTERN (269) 99
FLOAT (270) 108
FOR (271) 194 195
GOTO (272) 196
IF (273) 189 190
INLINE (274) 130
INT (275) 106
LONG (276) 107
REGISTER (277) 102
RESTRICT (278) 129
RETURN (279) 199
SHORT (280) 105
SIGNED (281) 110
SIZEOF (282) 24 25
STATIC (283) 100 136 137
STRUCT (284)
SWITCH (285) 191
TYPEDEF (286)
UNION (287)
UNSIGNED (288) 111
VOID (289) 103
VOLATILE (290) 128
WHILE (291) 192 193
BOOL (292) 112
COMPLEX (293) 113
IMAGINARY (294) 114
ID (295) 1 10 11 122 125 126 133 155 156 171 178 196 208
INT_NO (296) 2
FLOAT_NO (297) 3
CHARACTER (298) 5
STRING (299) 4
LEFT_SQUARE_BRACE (300) 8 135 136 137 138 170
RIGHT_SQUARE_BRACE (301) 8 135 136 137 138 170
LEFT_ROUND_BRACE (302) 6 9 14 15 25 33 134 139 140 189 190 191 192
    193 194 195
RIGHT_ROUND_BRACE (303) 6 9 14 15 25 33 134 139 140 189 190 191 192
    193 194 195
LEFT_CURLY_BRACE (304) 14 15 120 121 161 162 181 182
RIGHT_CURLY_BRACE (305) 14 15 120 121 161 162 181 182
PERIOD (306) 10 171
ARROW (307) 11
INCREMENT (308) 12 21
DECREMENT (309) 13 22
AMPERSAND (310) 26 53
MULTIPLY (311) 27 35 138 141 142 143 144
ADD (312) 28 39
SUBTRACT (313) 29 40
TILDA (314) 30
NEGATION (315) 31
DIVIDE (316) 36
MODULUS (317) 37
LEFT_SHIFT (318) 42
RIGHT_SHIFT (319) 43
LESS_THAN (320) 45
GREATER_THAN (321) 46
LESS_THAN_EQUAL_TO (322) 47
GREATER_THAN_EQUAL_TO (323) 48
DOUBLE_EQUAL (324) 50
NOT_EQUAL (325) 51
XOR (326) 55
BITWISE_OR (327) 57
BINARY_AND (328) 59
BINARY_OR (329) 61
QUESTION_MARK (330) 63
COLON (331) 63 178 179 180
SEMI_COLON (332) 84 187 188 193 194 195 196 197 198 199
ELLIPSIS (333) 150
EQUAL (334) 68 98 126 165
MULTIPLY_EQUAL (335) 69
DIVIDE_EQUAL (336) 70
MODULUS_EQUAL (337) 71
PLUS_EQUAL (338) 72
MINUS_EQUAL (339) 73
LEFT_SHIFT_EQUAL (340) 74
RIGHT_SHIFT_EQUAL (341) 75
AND_EQUAL (342) 76
XOR_EQUAL (343) 77
OR_EQUAL (344) 78
COMMA (345) 15 19 80 96 121 124 150 152 156 162 164
HASH (346)


Nonterminals, with rules where they appear

$accept (92)
    on left: 0
primary_expression (93)
    on left: 1 2 3 4 5 6, on right: 7
postfix_expression (94)
    on left: 7 8 9 10 11 12 13 14 15, on right: 8 9 10 11 12 13 20
argument_expression_listopt (95)
    on left: 16 17, on right: 9
argument_expression_list (96)
    on left: 18 19, on right: 16 19
unary_expression (97)
    on left: 20 21 22 23 24 25, on right: 21 22 24 32 65
unary_operator (98)
    on left: 26 27 28 29 30 31, on right: 23
cast_expression (99)
    on left: 32 33, on right: 23 33 34 35 36 37
multiplicative_expression (100)
    on left: 34 35 36 37, on right: 35 36 37 38 39 40
additive_expression (101)
    on left: 38 39 40, on right: 39 40 41 42 43
shift_expression (102)
    on left: 41 42 43, on right: 42 43 44 45 46 47 48
relational_expression (103)
    on left: 44 45 46 47 48, on right: 45 46 47 48 49 50 51
equality_expression (104)
    on left: 49 50 51, on right: 50 51 52 53
and_expression (105)
    on left: 52 53, on right: 53 54 55
exclusive_or_expression (106)
    on left: 54 55, on right: 55 56 57
inclusive_or_expression (107)
    on left: 56 57, on right: 57 58 59
logical_and_expression (108)
    on left: 58 59, on right: 59 60 61
logical_or_expression (109)
    on left: 60 61, on right: 61 62 63
conditional_expression (110)
    on left: 62 63, on right: 63 64 83
assignment_expression (111)
    on left: 64 65, on right: 18 19 65 66 79 80 136 137 160
assignment_expressionopt (112)
    on left: 66 67, on right: 135
assignment_operator (113)
    on left: 68 69 70 71 72 73 74 75 76 77 78, on right: 65
expression (114)
    on left: 79 80, on right: 6 8 63 80 81 188 189 190 191 192 193
expressionopt (115)
    on left: 81 82, on right: 194 195 199
constant_expression (116)
    on left: 83, on right: 126 170 179
declaration (117)
    on left: 84, on right: 185 195 203 206 207
declaration_specifiers (118)
    on left: 85 86 87 88 89 90 91 92, on right: 84 86 88 90 92 153
    154 204 205
init_declarator_listopt (119)
    on left: 93 94, on right: 84
init_declarator_list (120)
    on left: 95 96, on right: 93 96
init_declarator (121)
    on left: 97 98, on right: 95 96
storage_class_specifier (122)
    on left: 99 100 101 102, on right: 85 86
type_specifier (123)
    on left: 103 104 105 106 107 108 109 110 111 112 113 114 115, on right:
    87 88 116
specifier_qualifier_list (124)
    on left: 116 117, on right: 118 159
specifier_qualifier_listopt (125)
    on left: 118 119, on right: 116 117
enum_specifier (126)
    on left: 120 121 122, on right: 115
enumerator_list (127)
    on left: 123 124, on right: 120 121 124
enumerator (128)
    on left: 125 126, on right: 123 124
type_qualifier (129)
    on left: 127 128 129, on right: 89 90 117 145 146
function_specifier (130)
    on left: 130, on right: 91 92
declarator (131)
    on left: 131 132, on right: 97 98 134 153 204 205
direct_declarator (132)
    on left: 133 134 135 136 137 138 139 140, on right: 131 132 135
    136 137 138 139 140
pointer (133)
    on left: 141 142 143 144, on right: 131 143 144
type_qualifier_list (134)
    on left: 145 146, on right: 137 142 144 146 147
type_qualifier_listopt (135)
    on left: 147 148, on right: 135 136 138
parameter_type_list (136)
    on left: 149 150, on right: 139
parameter_list (137)
    on left: 151 152, on right: 149 150 152
parameter_declaration (138)
    on left: 153 154, on right: 151 152
identifier_list (139)
    on left: 155 156, on right: 156 157
identifier_listopt (140)
    on left: 157 158, on right: 140
type_name (141)
    on left: 159, on right: 14 15 25 33
initializer (142)
    on left: 160 161 162, on right: 98 163 164
initializer_list (143)
    on left: 163 164, on right: 14 15 161 162 164
designation (144)
    on left: 165, on right: 166
designationopt (145)
    on left: 166 167, on right: 163 164
designator_list (146)
    on left: 168 169, on right: 165 169
designator (147)
    on left: 170 171, on right: 168 169
statement (148)
    on left: 172 173 174 175 176 177, on right: 178 179 180 186 189
    190 191 192 193 194 195
labeled_statement (149)
    on left: 178 179 180, on right: 172
compound_statement (150)
    on left: 181 182, on right: 173 204 205
block_item_list (151)
    on left: 183 184, on right: 182 184
block_item (152)
    on left: 185 186, on right: 183 184
expression_statement (153)
    on left: 187 188, on right: 174
selection_statement (154)
    on left: 189 190 191, on right: 175
iteration_statement (155)
    on left: 192 193 194 195, on right: 176
jump_statement (156)
    on left: 196 197 198 199, on right: 177
translation_unit (157)
    on left: 200 201, on right: 0 201
external_declaration (158)
    on left: 202 203, on right: 200 201
function_definition (159)
    on left: 204 205, on right: 202
declaration_list (160)
    on left: 206 207, on right: 204 207
identifieropt (161)
    on left: 208 209, on right: 120 121
M (162)
    on left: 210, on right: 184
K (163)
    on left: 211, on right: 205


State 0

    0 $accept: . translation_unit $end

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

  101 storage_class_specifier: AUTO .

    $default  reduce using rule 101 (storage_class_specifier)


State 2

  104 type_specifier: CHAR .

    $default  reduce using rule 104 (type_specifier)


State 3

  127 type_qualifier: CONST .

    $default  reduce using rule 127 (type_qualifier)


State 4

  109 type_specifier: DOUBLE .

    $default  reduce using rule 109 (type_specifier)


State 5

  120 enum_specifier: ENUM . identifieropt LEFT_CURLY_BRACE enumerator_list RIGHT_CURLY_BRACE
  121               | ENUM . identifieropt LEFT_CURLY_BRACE enumerator_list COMMA RIGHT_CURLY_BRACE
  122               | ENUM . ID

    ID  shift, and go to state 32

    $default  reduce using rule 209 (identifieropt)

    identifieropt  go to state 33


State 6

   99 storage_class_specifier: EXTERN .

    $default  reduce using rule 99 (storage_class_specifier)


State 7

  108 type_specifier: FLOAT .

    $default  reduce using rule 108 (type_specifier)


State 8

  130 function_specifier: INLINE .

    $default  reduce using rule 130 (function_specifier)


State 9

  106 type_specifier: INT .

    $default  reduce using rule 106 (type_specifier)


State 10

  107 type_specifier: LONG .

    $default  reduce using rule 107 (type_specifier)


State 11

  102 storage_class_specifier: REGISTER .

    $default  reduce using rule 102 (storage_class_specifier)


State 12

  129 type_qualifier: RESTRICT .

    $default  reduce using rule 129 (type_qualifier)


State 13

  105 type_specifier: SHORT .

    $default  reduce using rule 105 (type_specifier)


State 14

  110 type_specifier: SIGNED .

    $default  reduce using rule 110 (type_specifier)


State 15

  100 storage_class_specifier: STATIC .

    $default  reduce using rule 100 (storage_class_specifier)


State 16

  111 type_specifier: UNSIGNED .

    $default  reduce using rule 111 (type_specifier)


State 17

  103 type_specifier: VOID .

    $default  reduce using rule 103 (type_specifier)


State 18

  128 type_qualifier: VOLATILE .

    $default  reduce using rule 128 (type_qualifier)


State 19

  112 type_specifier: BOOL .

    $default  reduce using rule 112 (type_specifier)


State 20

  113 type_specifier: COMPLEX .

    $default  reduce using rule 113 (type_specifier)


State 21

  114 type_specifier: IMAGINARY .

    $default  reduce using rule 114 (type_specifier)


State 22

  203 external_declaration: declaration .

    $default  reduce using rule 203 (external_declaration)


State 23

   84 declaration: declaration_specifiers . init_declarator_listopt SEMI_COLON
  204 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  205                    | declaration_specifiers . declarator K compound_statement

    ID                shift, and go to state 34
    LEFT_ROUND_BRACE  shift, and go to state 35
    MULTIPLY          shift, and go to state 36

    $default  reduce using rule 94 (init_declarator_listopt)

    init_declarator_listopt  go to state 37
    init_declarator_list     go to state 38
    init_declarator          go to state 39
    declarator               go to state 40
    direct_declarator        go to state 41
    pointer                  go to state 42


State 24

   85 declaration_specifiers: storage_class_specifier .
   86                       | storage_class_specifier . declaration_specifiers

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 85 (declaration_specifiers)

    declaration_specifiers   go to state 43
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 25

   87 declaration_specifiers: type_specifier .
   88                       | type_specifier . declaration_specifiers

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 87 (declaration_specifiers)

    declaration_specifiers   go to state 44
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 26

  115 type_specifier: enum_specifier .

    $default  reduce using rule 115 (type_specifier)


State 27

   89 declaration_specifiers: type_qualifier .
   90                       | type_qualifier . declaration_specifiers

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 89 (declaration_specifiers)

    declaration_specifiers   go to state 45
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 28

   91 declaration_specifiers: function_specifier .
   92                       | function_specifier . declaration_specifiers

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 91 (declaration_specifiers)

    declaration_specifiers   go to state 46
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 29

    0 $accept: translation_unit . $end
  201 translation_unit: translation_unit . external_declaration

    $end       shift, and go to state 47
    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    external_declaration     go to state 48
    function_definition      go to state 31


State 30

  200 translation_unit: external_declaration .

    $default  reduce using rule 200 (translation_unit)


State 31

  202 external_declaration: function_definition .

    $default  reduce using rule 202 (external_declaration)


State 32

  122 enum_specifier: ENUM ID .
  208 identifieropt: ID .

    LEFT_CURLY_BRACE  reduce using rule 208 (identifieropt)
    $default          reduce using rule 122 (enum_specifier)


State 33

  120 enum_specifier: ENUM identifieropt . LEFT_CURLY_BRACE enumerator_list RIGHT_CURLY_BRACE
  121               | ENUM identifieropt . LEFT_CURLY_BRACE enumerator_list COMMA RIGHT_CURLY_BRACE

    LEFT_CURLY_BRACE  shift, and go to state 49


State 34

  133 direct_declarator: ID .

    $default  reduce using rule 133 (direct_declarator)


State 35

  134 direct_declarator: LEFT_ROUND_BRACE . declarator RIGHT_ROUND_BRACE

    ID                shift, and go to state 34
    LEFT_ROUND_BRACE  shift, and go to state 35
    MULTIPLY          shift, and go to state 36

    declarator         go to state 50
    direct_declarator  go to state 41
    pointer            go to state 42


State 36

  141 pointer: MULTIPLY .
  142        | MULTIPLY . type_qualifier_list
  143        | MULTIPLY . pointer
  144        | MULTIPLY . type_qualifier_list pointer

    CONST     shift, and go to state 3
    RESTRICT  shift, and go to state 12
    VOLATILE  shift, and go to state 18
    MULTIPLY  shift, and go to state 36

    $default  reduce using rule 141 (pointer)

    type_qualifier       go to state 51
    pointer              go to state 52
    type_qualifier_list  go to state 53


State 37

   84 declaration: declaration_specifiers init_declarator_listopt . SEMI_COLON

    SEMI_COLON  shift, and go to state 54


State 38

   93 init_declarator_listopt: init_declarator_list .
   96 init_declarator_list: init_declarator_list . COMMA init_declarator

    COMMA  shift, and go to state 55

    $default  reduce using rule 93 (init_declarator_listopt)


State 39

   95 init_declarator_list: init_declarator .

    $default  reduce using rule 95 (init_declarator_list)


State 40

   97 init_declarator: declarator .
   98                | declarator . EQUAL initializer
  204 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  205                    | declaration_specifiers declarator . K compound_statement

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21
    EQUAL      shift, and go to state 56

    LEFT_CURLY_BRACE  reduce using rule 211 (K)
    $default          reduce using rule 97 (init_declarator)

    declaration              go to state 57
    declaration_specifiers   go to state 58
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    declaration_list         go to state 59
    K                        go to state 60


State 41

  132 declarator: direct_declarator .
  135 direct_declarator: direct_declarator . LEFT_SQUARE_BRACE type_qualifier_listopt assignment_expressionopt RIGHT_SQUARE_BRACE
  136                  | direct_declarator . LEFT_SQUARE_BRACE STATIC type_qualifier_listopt assignment_expression RIGHT_SQUARE_BRACE
  137                  | direct_declarator . LEFT_SQUARE_BRACE type_qualifier_list STATIC assignment_expression RIGHT_SQUARE_BRACE
  138                  | direct_declarator . LEFT_SQUARE_BRACE type_qualifier_listopt MULTIPLY RIGHT_SQUARE_BRACE
  139                  | direct_declarator . LEFT_ROUND_BRACE parameter_type_list RIGHT_ROUND_BRACE
  140                  | direct_declarator . LEFT_ROUND_BRACE identifier_listopt RIGHT_ROUND_BRACE

    LEFT_SQUARE_BRACE  shift, and go to state 61
    LEFT_ROUND_BRACE   shift, and go to state 62

    $default  reduce using rule 132 (declarator)


State 42

  131 declarator: pointer . direct_declarator

    ID                shift, and go to state 34
    LEFT_ROUND_BRACE  shift, and go to state 35

    direct_declarator  go to state 63


State 43

   86 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 86 (declaration_specifiers)


State 44

   88 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 88 (declaration_specifiers)


State 45

   90 declaration_specifiers: type_qualifier declaration_specifiers .

    $default  reduce using rule 90 (declaration_specifiers)


State 46

   92 declaration_specifiers: function_specifier declaration_specifiers .
